fix spacing on create task

--- a/packages/frontend/src/tasks/_create.scss
+++ b/packages/frontend/src/tasks/_create.scss
@@ -33,8 +33,22 @@
       margin: 0 11.5px !important;
       padding-bottom: 2px;
 
+      &--first {
+        margin: 0 11.5px !important;
+        padding-bottom: 2px;
+        margin-top: 1.5px !important;
+      }
+
+      &--middle {
+        margin: 0 11.5px !important;
+        padding-bottom: 2px;
+        margin-bottom: 11px !important;
+      }
+
       &--last {
-        padding-top: 1px;
+        margin: 0 11.5px !important;
+        padding-bottom: 2px;
+        margin-bottom: 10.5px !important;
       }
 
       &--filter {
